@@ -167,6 +167,67 @@ namespace OpenRCT2::Scripting
         return result;
     }
 
+    std::vector<DukValue> OpenRCT2::Scripting::ScMap::getAllEntitiesOnTile(
+        const std::string& type, const DukValue& tilePos) const
+    {
+        // Get the tile position
+        const auto pos = FromDuk<CoordsXY>(tilePos);
+
+        // Declare a vector that will hold the result to return
+        std::vector<DukValue> result;
+
+        // Use EntityTileList to iterate all entities of the given type on the tile, and push them to result
+        if (type == "balloon")
+        {
+            for (auto sprite : EntityTileList<Balloon>(pos))
+            {
+                result.push_back(GetObjectAsDukValue(_context, std::make_shared<ScEntity>(sprite->sprite_index)));
+            }
+        }
+        else if (type == "car")
+        {
+            for (auto sprite : EntityTileList<Vehicle>(pos))
+            {
+                result.push_back(GetObjectAsDukValue(_context, std::make_shared<ScVehicle>(sprite->sprite_index)));
+            }
+        }
+        else if (type == "litter")
+        {
+            for (auto sprite : EntityTileList<Litter>(pos))
+            {
+                result.push_back(GetObjectAsDukValue(_context, std::make_shared<ScLitter>(sprite->sprite_index)));
+            }
+        }
+        else if (type == "duck")
+        {
+            for (auto sprite : EntityTileList<Duck>(pos))
+            {
+                result.push_back(GetObjectAsDukValue(_context, std::make_shared<ScEntity>(sprite->sprite_index)));
+            }
+        }
+        else if (type == "guest")
+        {
+            for (auto sprite : EntityTileList<Guest>(pos))
+            {
+                result.push_back(GetObjectAsDukValue(_context, std::make_shared<ScGuest>(sprite->sprite_index)));
+            }
+        }
+        else if (type == "staff")
+        {
+            for (auto sprite : EntityTileList<Staff>(pos))
+            {
+                result.push_back(GetObjectAsDukValue(_context, std::make_shared<ScStaff>(sprite->sprite_index)));
+            }
+        }
+        else
+        {
+            // If the given type isn't valid, throw an error
+            duk_error(_context, DUK_ERR_ERROR, "Invalid entity type: %s", type.c_str());
+        }
+
+        return result;
+    }
+
     template<typename TEntityType, typename TScriptType>
     DukValue createEntityType(duk_context* ctx, const DukValue& initializer)
     {
@@ -252,6 +313,7 @@ namespace OpenRCT2::Scripting
         dukglue_register_method(ctx, &ScMap::getTile, "getTile");
         dukglue_register_method(ctx, &ScMap::getEntity, "getEntity");
         dukglue_register_method(ctx, &ScMap::getAllEntities, "getAllEntities");
+        dukglue_register_method(ctx, &ScMap::getAllEntitiesOnTile, "getAllEntitiesOnTile");
         dukglue_register_method(ctx, &ScMap::createEntity, "createEntity");
     }
 
