@@ -42,6 +42,8 @@ namespace OpenRCT2::Scripting
 
         std::vector<DukValue> getAllEntities(const std::string& type) const;
 
+        std::vector<DukValue> getAllEntitiesOnTile(const std::string& type, const DukValue& tilePos) const;
+
         DukValue createEntity(const std::string& type, const DukValue& initializer);
 
         static void Register(duk_context* ctx);
